# spotify-alarm

./: .gitignore  Cargo.toml  README.md  alarms.json.example  run.sh
src/: alarm.rs  auth.rs  main.rs  spotify.rs  state.rs  tmp.rs  util.rs
src/web/: frontend.html  frontend.rs  middleware.rs  mod.rs  routes.rs
