[package]
name = "spotify-alarm-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librespot = "0.4.2"
tokio = { version = "1.35.1" }
rand = '0.8.5'
chrono = '0.4.31'
home = "0.5.9"

## make it SMALL
# [profile.release]
# opt-level = 'z'     # Optimize for size
# lto = true          # Enable link-time optimization
# codegen-units = 1   # Reduce number of codegen units to increase optimizations
# panic = 'abort'     # Abort on panic
# strip = true        # Strip symbols from binary*
